# UniCa

./: README.md
Algorithm_And_Data_Structures/Lezione 1/RicercaSequenziale/: main.c
Algorithm_And_Data_Structures/Lezione 1/SelectionSort/: CMakeLists.txt
Algorithm_And_Data_Structures/Lezione 11/InsertionSort/: CMakeLists.txt  main.c
Algorithm_And_Data_Structures/Lezione 11/QuickInsertionSort/: CMakeLists.txt
Algorithms_And_Data_Structures/Report Finale/Progetto 2.0/: CMakeLists.txt  main  main.c  sortingAlgorithms.c  supportFunctions.c  table_report_finale.xlsx  vectorFunctions.c  vectorFunctions.h
Numerical_Methods/Esercitazione 1/: menu.m  radice.m
Numerical_Methods/Esercitazione 2/: approx.m
Numerical_Methods/Esercitazione 3/: eigmat.m  matprod.m  vettnorm.m
Numerical_Methods/Esercitazione 4/: gauss_lu.m  gauss_palu.m  gs.m  jacobi.m  test_gauss_lu.m  test_gauss_palu.m  test_metodi_iter.m
Numerical_Methods/Esercitazione 5/: bisec.m  corde.m  newton.m  secanti.m  test_nonlin.m
Numerical_Methods/Esercitazione 6/: canint.m  lagrint.m  test_interp.m
Object_Oriented_Programming/Esercitazione_2/: Main.java  Monitor.java  Quaderno.java  Rectangle.java
Object_Oriented_Programming/Esercitazione_3/: Main.java  Persona.java  Studente.java
Object_Oriented_Programming/Esercitazione_8/: TestComparable.java
Video_Game_Design/first_project/: Assembly-CSharp.csproj  first_project.sln
Video_Game_Design/second_project/: Assembly-CSharp.csproj
Video_Game_Design/third_project/: Assembly-CSharp.csproj  second_project.sln  third_project.sln
(+257 files in other folders)
